css/style.css
.bs-docs-featurette {
  padding-top: 8%;
}

.bs-docs-featurette-clone {
  padding-top: 5%;
}

.bs-docs-featurette_head {
  padding-top: 1%;
}

.column {
  float: left;
  width: 50.00%;
}

.row1 {
  padding-left: 15px;
}

.row2 {
  float: left;
  padding-top: 13%;
}

.row0 {
  width: 100%;
}

.row3 {
  padding-left: 2%;
}

.row4 {
  float: right;
}

.column0 {
  float: left;
  width: 41%;
  padding-left: 1%;
}

.column1 {
  float: left;
  width: 50.00%;
  padding-left: 1%;
}

.column2 {
  float: left;
  width: 50.00%;
  padding-left: 1%;
  padding-right: 1%;
  padding-top: 3.7%;
}

.column3 {
  float: left;
  width: 50.00%;
  padding-left: 1%;
  padding-right: 1%;
  padding-top: 10%;
}

.column4 {
  float: right;
  padding-top: 1%;
  width: 55%
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.responsive {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  max-width: 240px;
  height: auto;
}

.responsive_lg {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  max-width: 600px;
  height: 100%;
}

.responsive_xl {
  display: block;
  margin-left: auto;
  margin-right: auto;

  width: 96%;
  height: 100%;
}

.responsive_md {
  display: block;
  margin-left: 10px;
  margin-right: auto;
  width: 75%;
  max-width: 600px;
  height: auto;
}

.responsive_ht {
  display: block;
  max-width: 100%;
  height: auto;
}


.container0 {
  position: relative;
  width: 100%;
  height: 100%;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .3s ease;
}

.container0:hover .overlay {
  opacity: 1;
}

p {
  font-family: "Arial", Arial, monospace;
  font-size: 18px;
}


navbar-nav li:active{
  background-color: #00ff00;
  color: green;
}

#header_name {
  font-family: "Arial", Arial, monospace;
  font-size: 50px;
}

#subsec_name {
  font-family: "Arial", Arial, monospace;
  font-size: 40px;
}

#subsub_name {
  font-family: "Arial", Arial, monospace;
  font-size: 25px;
}

#text_info {
  font-family: "Arial", Arial, monospace;
  font-size: 15px;
}

#button_submit {
  background-color: #000000;
  color: white;
  border: 3px solid black;
  padding: 7px 21px;
  text-align: center;
  display: inline-block;
  font-size: 15px;
  border-radius: 12px;
  transition: all 0.5s;
  cursor: pointer;
  margin: 5px;
  font-family: "Arial", Arial, monospace;
}

#button_submit span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

#button_submit span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

#button_submit:hover span{
  padding-right: 25px;
}

#button_submit:hover span:after {
  opacity: 1;
  right: 0;
}

#VR {
  width: 100%;
  height: 65px;
  position: relative;
  z-index: 100;
}

#MC {
  padding-top: 28%;
  width: 100%;
  height: 65px;
  position: relative;
  bottom: 0;
}

#EX {
  padding-top: 40%;
  width: 100%;
  height: 65px;
  position: relative;
}

#project_par {
  text-align: justify;
  text-justify: inter-word;
  font-family: "Arial", Arial, monospace;
  font-size: 15px;
}

